--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Heartmore99Percent</title>
-  <link rel="icon" href="새 폴더 (4)/ico.ico" type="image/x-icon">
+  <link rel="icon" href="main/ico.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
@@ -18,11 +18,11 @@
       background-color: #FE8AFF;
       display: flex;
       flex-wrap: nowrap;
-      cursor: url('새 폴더 (4)/Blue Normal.cur') 0 0, auto;
+      cursor: url('main/Blue Normal.cur') 0 0, auto;
     }
 
     a, button, input, label, .toggle-btn, .bgm-btn {
-      cursor: url('새 폴더 (4)/Blue Link.cur') 0 0, pointer;
+      cursor: url('main/Blue Link.cur') 0 0, pointer;
     }
 
     .sidebar {
@@ -193,7 +193,7 @@
   </div>
 
   <audio id="bgm" loop>
-    <source src="새 폴더 (4)/audio.mp3" type="audio/mpeg">
+    <source src="main/audio.mp3" type="audio/mpeg">
   </audio>
 
   <div id="mobileSidebarOverlay"></div>
@@ -259,13 +259,13 @@
     // 이미지 세트
     const imageSets = {
       1: [
-        "새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg",
-        "새 폴더 (4)/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png",
+        "portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg",
+        "portfolio/1c/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png",
         "image3.jpg",
         "image4.jpg"
       ],
-      2: ["새 폴더 (4)/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png","imageB.jpg","imageC.jpg"],
-      3: ["새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg","photo2.png","photo3.png","photo4.png"]
+      2: ["portfolio/1c/download.png"],
+      3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
     };
 
     function loadImages(setNumber) {
