--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@
       1: [
         "portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg",
         "portfolio/1c/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png",
-        "image3.jpg",
-        "image4.jpg"
+        "불장미.jpg"
       ],
       2: ["portfolio/1c/download.png"],
       3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
