--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
     // 이미지 세트
     const imageSets = {
       1: [
-        "portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg",
-        "portfolio/1c/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png",
-        "불장미.jpg"
+        "portfolio/1c/제목.jpg",
+        "portfolio/1c/그림자카나리.png",
+        "portfolio/1c/불장미.png"
       ],
       2: ["portfolio/1c/download.png"],
       3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
