--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     // 이미지 세트
     const imageSets = {
       1: [
-        "portfolio/1c/제목.jpg",
+        "portfolio/1c/하트링.png",
         "portfolio/1c/그림자카나리.png",
         "portfolio/1c/불장미.png"
       ],
