--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         "portfolio/1c/하트링.png",   // [0]
         "portfolio/1c/그림자카나리.png", // [1]
         "portfolio/1c/불장미.png",       // [2]
-        "portfolio/1c/새이미지2.png"  // [3] 
+        "main/ico.ico"  // [3] 
       ],
       2: ["portfolio/1c/download.png"],
       3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
