--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       left: 0px;
       transform: translateY(-50%);
       background-color: rgba(255, 255, 255, 0.5);
-      color: #FF0051;
+      color: #fcfcfc;
       border: none;
       padding: 10px 5.1px;
       font-size: 18px;
