--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       top: 9px;
       right: 8px;
       background-color: rgba(255, 255, 255, 0);
-      color: #2b2b2b;
+      color: #fff263;
       border: 0px solid #FF0051;
       padding: 10px 15px;
       font-size: 17px;
