--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         padding: 40px 25px;
         transform: translateX(-100%);
         z-index: 999;
-        background-color: rgba(0,0,0,0.95);
+        background-color: rgba(255, 242, 99, 0.95);
       }
 
       .sidebar.active {
