--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       left: 0px;
       transform: translateY(-50%);
       background-color: rgba(255, 255, 255, 0.5);
-      color: #ffc7c7;
+      color: #b899ff;
       border: none;
       padding: 10px 5.1px;
       font-size: 18px;
@@ -91,7 +91,7 @@
       top: 9px;
       right: 8px;
       background-color: rgba(255, 255, 255, 0);
-      color: #ffc7c7;
+      color: #b899ff;
       border: 0px solid #FF0051;
       padding: 10px 15px;
       font-size: 17px;
