--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     // ❗ 이미지 세트: 새 이미지 2개 (예시)
     const imageSets = {
       1: [
+        "portfolio/1c/소라.png",   // [0]
         "portfolio/1c/하트링.png",   // [0]
         "portfolio/1c/그림자카나리.png", // [1]
         "portfolio/1c/불장미.png",       // [2]
