--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     /* 이미지 세트 */
     const imageSets = {
       1: [
+        "portfolio/1c/다이아.png",    
         "portfolio/1c/소라.png",
         "portfolio/1c/하트링.png",
         "portfolio/1c/그림자카나리.png",
