--- a/index.html
+++ b/index.html
@@ -278,8 +278,9 @@
     // ❗ 이미지 세트: 여기에 경로만 계속 추가하시면 됩니다.
     const imageSets = {
       1: [
-        "portfolio/1c/프리지아.png",   
-        "portfolio/1c/별사과.png",    
+        "portfolio/1c/홀로그램금붕어.png",
+        "portfolio/1c/프리지아.png",
+        "portfolio/1c/별사과.png",
         "portfolio/1c/다이아.png",    
         "portfolio/1c/소라.png",
         "portfolio/1c/하트링.png",
