--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
     // ❗ 이미지 세트: 여기에 경로만 계속 추가하시면 됩니다.
     const imageSets = {
       1: [
+        "portfolio/1c/고리게임.png",
         "portfolio/1c/홀로그램금붕어.png",
         "portfolio/1c/프리지아.png",
         "portfolio/1c/별사과.png",
