--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
       font-family: 'Pretendard', sans-serif;
       font-size: 14px;
       line-height: 1;
-      color: #c40a5d;
+      color: #9e064a;
     ">
-      <h2 style="margin-top:0; font-size:26px; font-weight:700;">About Me</h2>
+      <h2 style="margin-top:0; font-size:22px; font-weight:700;">About Me</h2>
       
       안녕하세요. Heartmore99Percent입니다.<br>
       이곳은 저의 작업물을 보관하는 공간입니다.<br><br>
