--- a/index.html
+++ b/index.html
@@ -288,15 +288,15 @@
     // ❗ 이미지 세트: 여기에 경로만 계속 추가하시면 됩니다.
     const imageSets = {
       1: [
-        "portfolio/1c/고리게임.png",
-        "portfolio/1c/홀로그램금붕어.png",
-        "portfolio/1c/프리지아.png",
-        "portfolio/1c/별사과.png",
-        "portfolio/1c/다이아.png",    
-        "portfolio/1c/소라.png",
+        "portfolio/1c/고리게임.webp",
+        "portfolio/1c/홀로그램금붕어.webp",
+        "portfolio/1c/프리지아.webp",
+        "portfolio/1c/별사과.webp",
+        "portfolio/1c/다이아.webp",    
+        "portfolio/1c/소라.webp",
         "portfolio/1c/하트링.png",
-        "portfolio/1c/그림자카나리.png",
-        "portfolio/1c/불장미.png",
+        "portfolio/1c/그림자카나리.webp",
+        "portfolio/1c/불장미.webp",
         "portfolio/1c/end.png"
       ],
       2: ["portfolio/1c/download.png"],
