--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       머릿속에 떠오른 비정형의 이미지들을<br>
       가장 감각적인 형태의 현실로 구현해냅니다.<br><br>
 
-      새로운 협업 제안은 언제나 환영합니다.<br><br>
+      협업 제안은 언제나 환영합니다.<br><br>
 
       <b>contact:</b> gatto27@naver.com<br>
       <b>instagram:</b> @intothestarlight
