--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
       안녕하세요. Heartmore99Percent입니다.<br>
       이곳은 저의 작업물을 보관하는 공간입니다.<br><br>
 
-      저는 순간의 이미지를 현실로 만듭니다.<br><br>
+      순간의 이미지를 현실로 만듭니다.<br><br>
 
-      머릿속에 떠오른 비정형의 이미지들을<br>
-      가장 감각적인 형태의 현실로 구현해냅니다.<br><br>
+      머릿속에 떠오른 비정형의 이미지들을 보석을 세공하듯 다듬어<br>
+      가장 감각적인 형태로 구현해냅니다.<br><br>
 
       협업 제안은 언제나 환영합니다.<br><br>
 
