--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@
         "portfolio/1c/불장미.webp",
         "portfolio/1c/end.png"
       ],
-      2: ["portfolio/1c/end.png"],
+      2: [
+        "portfolio/1c/고리게임.webp",
+        "portfolio/1c/end.png"],
       3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
     };
 
