--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <p>
       <b><a href="#">1.</a></b><br>
       <b><a href="#">2.</a></b><br>
-      <b><a href="#">3.</a></b>
+      <b><a href="#">44.</a></b>
     </p>
     <p>
       <a href="#" class="special-link" onclick="loadAbout(event)">About me</a><br>
@@ -300,7 +300,7 @@
         "portfolio/1c/end.png"
       ],
       2: [
-        "portfolio/1c/고리게임.webp",
+        "portfolio/1c/end.png",
         "portfolio/1c/end.png"],
       3: ["portfolio/1c/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg"]
     };
