--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <p>
       <b><a href="#">1.</a></b><br>
       <b><a href="#">2.</a></b><br>
-      <b><a href="#">44.</a></b>
+      <b><a href="writing.html">3.</a></b>
     </p>
     <p>
       <a href="#" class="special-link" onclick="loadAbout(event)">About me</a><br>
