--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         title: "첫 번째 기록 (p1.md)",
         date: "2024-05-20",
         desc: "마크다운 파일 p1.md의 내용을 불러와 보여줍니다.",
-        path: "heartmore99pct/heartmore99pct.github.io/posts/p1.md" // ❗ 파일 경로 지정
+        path: "posts/p1.md" // ❗ 파일 경로 지정
       },
       {
         title: "두 번째 기록",
