--- a/index.html
+++ b/index.html
@@ -426,12 +426,12 @@
       {
         title: "고양이 이야기 (p1.md)",
         date: "2025-12-12",
-        path: "post/p1.md" // ❗ 'post' 폴더 이름으로 수정
+        path: "posts/p1.md" // ❗ 'post' 폴더 이름으로 수정
       },
       {
         title: "두 번째 기록",
         date: "2025-12-12",
-        path: "post/another.md" // 다른 파일이 있다면
+        path: "posts/p1.md" // 다른 파일이 있다면
       }
     ];
 
