--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     /* ❗ 1. '# 고양이' (H1) 스타일 수정 */
     .markdown-body h1 { 
         font-family: 'sans-serif', sans-serif !important; /* Pretendard 폰트 적용 */
-        font-size: 0.7em; 
-        color: #242424; /* 글자색 변경 */
+        font-size: 18px; 
+        color: #303030; /* 글자색 변경 */
         border-bottom: 1px solid #636363; 
         padding-bottom: 15px; 
     }
@@ -170,9 +170,9 @@
     /* ❗ 2. '야옹' (첫 번째 P) 스타일 수정 */
     .markdown-body p:first-of-type {
         font-family: 'sans-serif', sans-serif; /* 궁서체 적용 (기기에 폰트가 있어야 보입니다) */
-        font-size: 0.5em;
+        font-size: 15px;
         font-weight: bold;
-        color: #242424; 
+        color: #303030; 
         line-height: 1.2;
         margin-top: 20px;
         margin-bottom: 20px; 
