--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     .markdown-body {
         grid-column: 1 / -1;
         width: 100%;
-        max-width: 800px;
+        max-width: 200px;
         color: white;
         font-family: 'STIX Two Text', serif;
         line-height: 1.8;
@@ -424,12 +424,12 @@
     // path: 'post/파일명.md' 형식으로 적어주세요.
     const writingData = [
       {
-        title: "고양이 이야기 (p1.md)",
+        title: "두번째",
         date: "2025-12-12",
         path: "posts/p1.md" // ❗ 'post' 폴더 이름으로 수정
       },
       {
-        title: "두 번째 기록",
+        title: "첫번재",
         date: "2025-12-12",
         path: "posts/p1.md" // 다른 파일이 있다면
       }
