--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     .markdown-body {
         grid-column: 1 / -1;
         width: 100%;
-        max-width: 200px;
+        max-width: 50px;
         color: white;
-        font-family: 'STIX Two Text', serif;
+        font-family: 'sans-serif', serif;
         line-height: 1.8;
     }
 
