--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        font-size: 20px;
         color: white;
     }
 
