--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     .writing-item {
         border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        padding-bottom: 15px;
+        padding-bottom: 10px; /*아래글과 간격*/
     }
     
     .writing-item:last-child {
@@ -113,10 +113,10 @@
     }
 
     .writing-meta {
-        font-size: 14px;
+        font-size: 14px; /*날짜모양*/
         font-weight: 200;
         color: #FF0051; 
-        margin-bottom: 8px;
+        margin-bottom: 5px;
         font-family: 'STIX Two Text', serif;
         font-style: italic;
     }
