--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     .writing-meta {
         font-size: 14px; /*날짜모양*/
         font-weight: 100;
-        color: #FF0051; 
+        color: #c430ff; 
         margin-bottom: 3px;
         font-family: 'STIX Two Text', serif;
         font-style: italic;
@@ -160,7 +160,7 @@
     /* ❗ 1. '# 고양이' (H1) 스타일 수정 */
     .markdown-body h1 { 
         font-family: 'sans-serif', sans-serif !important; /* Pretendard 폰트 적용 */
-        font-size: 18px; 
+        font-size: 17px; 
         color: #303030; /* 글자색 변경 */
         border-bottom: 1px solid #63636300; 
         padding-bottom: 15px; 
@@ -171,8 +171,8 @@
     /* ❗ 2. '야옹' (첫 번째 P) 스타일 수정 */
     .markdown-body p:first-of-type {
         font-family: 'sans-serif', sans-serif; /* 궁서체 적용 (기기에 폰트가 있어야 보입니다) */
-        font-size: 15px;
-        font-weight: bold;
+        font-size: 14px;
+        font-weight: none;
         color: #303030; 
         line-height: 1.2;
         margin-top: 20px;
