--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     .writing-meta {
         font-size: 14px; /*날짜모양*/
         font-weight: 100;
-        color: #c430ff; 
+        color: #b700ff; 
         margin-bottom: 3px;
         font-family: 'STIX Two Text', serif;
         font-style: italic;
@@ -130,7 +130,7 @@
     }
     
     .writing-title:hover {
-        color: #FF0051;
+        color: #b700ff; 
         text-decoration: underline;
     }
 
@@ -430,7 +430,7 @@
         path: "posts/p1.md" // ❗ 'post' 폴더 이름으로 수정
       },
       {
-        title: "첫번재",
+        title: "분홍색",
         date: "2025-12-12",
         path: "posts/p1.md" // 다른 파일이 있다면
       }
@@ -550,7 +550,7 @@
 
           협업 제안은 언제나 환영합니다.<br><br>
 
-          <b>contact:</b> gatto27@naver.com<br>
+          <b>mail:</b> gatto27@naver.com<br>
           <b>instagram:</b> @intothestarlight
         </div>
       `;
