--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
 
   <div class="sidebar" id="sidebar">
-    <h3><a href="." class="site-title-link">Heartmore99%</a></h3>
+    <h3>Heartmore99%</h3>
     <p>
       <b><a href="#">1.</a></b><br>
       <b><a href="#">2.</a></b><br>
@@ -331,7 +331,7 @@
 
   <div class="content">
     <div class="mobile-header">
-      <h3><a href="." class="site-title-link">Heartmore99%</a></h3>
+      <h3>Heartmore99%</h3>
     </div>
   </div>
 
