--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           협업 제안은 언제나 환영합니다.<br><br>
 
           <b>mail:</b> gatto27@naver.com<br>
-          <b>instagram:</b> @intothestarlight
+          <b>instagram:</b> @waml_design
         </div>
       `;
 
