--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
       <span><a href="#" onclick="loadWriting(event)">3.</a></span>
     </p>
     <p>
-      <a href="#" class="special-link" onclick="loadAbout(event)">About me</a><br>
+      <a href="#" class="special-link" onclick="loadAbout(event)">About</a><br>
       <a href="#" class="special-link">❤︎</a><br>
       <a href="#" class="special-link">❤︎</a>
     </p>
@@ -538,7 +538,7 @@
           line-height: 1;
           color: #9e064a;
         ">
-          <h2 style="margin-top:0; font-size:19px; font-weight:700;">About Me</h2>
+          <h2 style="margin-top:0; font-size:19px; font-weight:700;">About</h2>
           
           안녕하세요. Heartmore99Percent입니다.<br>
           이곳은 저의 작업물을 보관하는 공간입니다.<br><br>
