--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         font-size: 15px;
         font-weight: 450;
         margin: 0 0 3px 0;
-        color: white;
+        color: #303030;
         transition: color 0.2s;
     }
     
