--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
   <div class="sidebar" id="sidebar">
     <h3>Heartmore99%</h3>
     <p>
-      <b><a href="#">1.</a></b><br>
-      <b><a href="#">2.</a></b><br>
-      <span><a href="#" onclick="loadWriting(event)">3.</a></span>
+      <b><a href="#">.Graphics</a></b><br>
+      <b><a href="#">.Draw</a></b><br>
+      <span><a href="#" onclick="loadWriting(event)">.Text</a></span>
     </p>
     <p>
       <a href="#" class="special-link" onclick="loadAbout(event)">About</a><br>
