--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     // ❗ 이미지 세트
     const imageSets = {
       1: [
-        "portfolio/1c/글리치타이포.webp",
+        "portfolio/1c/글리치타이포.png",
         "portfolio/1c/고리게임.webp",
         "portfolio/1c/홀로그램금붕어.webp",
         "portfolio/1c/프리지아.webp",
