--- a/index.html
+++ b/index.html
@@ -408,11 +408,9 @@
         "portfolio/1c/소라.webp",
         "portfolio/1c/하트링.png",
         "portfolio/1c/그림자카나리.webp",
-        "portfolio/1c/불장미.webp",
-        "portfolio/1c/end.png"
+        "portfolio/1c/불장미.webp"
       ],
       2: [
-        "portfolio/1c/end.png",
         "portfolio/1c/end.png"
       ]
     };
