--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
       /* ❗ Noto Serif KR 적용 */
       font-family: 'Noto Serif KR', 'Batang', serif;
       line-height: 1.8;
+      font-weight: 500;
     }
 
     /* ❗ 1. '# 고양이' (H1) 스타일 수정 */
@@ -164,6 +165,7 @@
       color: #303030; 
       border-bottom: 1px solid #63636300; 
       padding-bottom: 15px; 
+      font-weight: 500;
     }
     
     .markdown-body h2 { font-size: 2em; margin-top: 30px; }
