--- a/index.html
+++ b/index.html
@@ -313,7 +313,9 @@
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
 
   <div class="sidebar" id="sidebar">
-    <h3>Heartmore99%</h3>
+        <a href="#" onclick="loadImages(1); return false;" style="color: white; text-decoration: none;"></a>
+      <h3>Heartmore99%</h3>
+    </a>
     <p>
       <b><a href="#">.Graphics</a></b><br>
       <b><a href="#">.Draw</a></b><br>
@@ -328,7 +330,9 @@
 
   <div class="content">
     <div class="mobile-header">
-      <h3>Heartmore99%</h3>
+          <a href="#" onclick="loadImages(1); return false;" style="color: white; text-decoration: none;">
+       <h3>Heartmore99%</h3>
+      </a>
     </div>
   </div>
 
