--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
 
   <div class="sidebar" id="sidebar">
-        <a href="#" onclick="loadImages(1); return false;" style="color: white; text-decoration: none;"></a>
+        <a href="#" onclick="loadImages(1); return false;" style="color: white; text-decoration: none;">
       <h3>Heartmore99%</h3>
     </a>
     <p>
