--- a/index.html
+++ b/index.html
@@ -292,6 +292,15 @@
     img, body, a, p, h3 {
       -webkit-user-drag: none;
       user-select: none;
+
+      
+    }
+
+    .sidebar h3,
+    .mobile-header h3,
+    .sidebar a {
+      -webkit-tap-highlight-color: transparent;
+      outline: none;
     }
 
     @media (max-width: 768px) {
