--- a/index.html
+++ b/index.html
@@ -303,6 +303,13 @@
       outline: none;
     }
 
+    .mobile-header a,
+    .mobile-header a:focus,
+    .mobile-header a:active {
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+    }
+
     @media (max-width: 768px) {
       #mobileSidebarOverlay {
         position: fixed;
