--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
         display: block;
         color: white;
       }
+      .markdown-body {
+        padding-left: 16px;
+        padding-right: 16px;
+        box-sizing: border-box;
+       }
     }
 
     /* 드래그 + 선택 방지 */
