--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
         padding-right: 16px;
         box-sizing: border-box;
        }
-    }
+      .writing-list {
+        padding-left: 16px;
+        padding-right: 16px;
+        box-sizing: border-box;
+        }
 
     /* 드래그 + 선택 방지 */
     img, body, a, p, h3 {
