--- a/index.html
+++ b/index.html
@@ -296,7 +296,11 @@
         padding-right: 16px;
         box-sizing: border-box;
         }
-
+      .writing-list {
+        max-width: 520px;
+        margin: 0 auto;
+        padding: 0 16px;
+        }
     /* 드래그 + 선택 방지 */
     img, body, a, p, h3 {
       -webkit-user-drag: none;
