--- a/index.html
+++ b/index.html
@@ -297,6 +297,12 @@
         box-sizing: border-box;
       }
 
+      .about-text-box {
+        padding-left: 16px;
+        padding-right: 16px;
+        box-sizing: border-box;
+      }
+
     /* 드래그 + 선택 방지 */
     img, body, a, p, h3 {
       -webkit-user-drag: none;
