--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           보석을 세공하듯 다듬어<br>
           가장 감각적인 형태로 구현해냅니다.<br><br>
 
-          협업 제안은 언제나 환영합니다.✴<br><br>
+          협업 제안은 언제나 환영합니다.✶✷<br><br>
 
           <b>mail:</b> gatto27@naver.com<br>
           <b>instagram:</b> @waml_design
