--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     </p>
     <p>
       <a href="#" class="special-link" onclick="loadAbout(event)">About</a><br>
-     //밑에 하트메뉴는 나중에 필요할때 활성화
+      /* 3밑에 하트메뉴는 나중에 필요할때 활성화 */
       <!--
       <a href="#" class="special-link">❤︎</a><br>
       <a href="#" class="special-link">❤︎</a>
