--- a/index.html
+++ b/index.html
@@ -151,9 +151,15 @@
       width: 100%;
       max-width: 600px;
       color: white;
+      background-color: rgba(255, 255, 255, 0.2); /* 흰색 20% 투명도 */
+      padding: 30px;            /* 박스 안쪽 여백 */
+      border-radius: 15px;      /* 모서리 둥글게 */
+      backdrop-filter: blur(5px); /* (선택) 박스 뒤를 흐리게 해서 더 유리같이 만듦 */
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1); /* (선택) 살짝 그림자 */
       /* ❗ Noto Serif KR 적용 */
       font-family: 'Noto Serif KR', 'Batang', serif;
       line-height: 1.8;
+      box-sizing: border-box;
     }
 
     /* ❗ 1. '# 고양이' (H1) 스타일 수정 */
