--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
   </div>
 
   <audio id="bgm" loop>
-    <source src="main/audio.mp3" type="audio/mpeg">
+    <source src="main/audio.mp3" type="audio/mpeg"> <!-- 제목 Funk Disco Groove type beat - OASIS -->
   </audio>
 
   <div id="mobileSidebarOverlay"></div>
