--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
           머릿속에 떠오른 비정형의 이미지들을<br>
           보석을 세공하듯 다듬어<br>
-          가장 감각적인 형태로 구현해냅니다.<br><br>
+          저만의 감각적인 형태로 구현해냅니다.<br><br>
 
           협업 제안은 언제나 환영합니다.✶✷<br><br>
 
