--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
         "portfolio/1c/불장미.webp"
       ],
       2: [
+        "portfolio/2c/뉴런.png"
         "portfolio/2c/빛.png"
       ]
     };
