--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
     const imageSets = {
       1: [
         "portfolio/1c/글리치타이포.png",
+        "portfolio/1c/냥발.webp",
         "portfolio/1c/고리게임.webp",
         "portfolio/1c/홀로그램금붕어.webp",
         "portfolio/1c/프리지아.webp",
