--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
     // path: 'post/파일명.md' 형식으로 적어주세요.
     const writingData = [
       {
-        title: "임시제목",
+        title: "다락",
         date: "2025-12-12",
         path: "posts/p2.md" // ❗ 'post' 폴더 이름으로 수정
       },
